XML/JAXB added